# Construction

./: .gitignore  analysis.py  download.py  main.py  models.py  pipeline.py  pyproject.toml  ruff.toml  series-históricas-a-mayo-2026.xls  train.py
.github/workflows/: lint.yml
data/processed/: train_data.csv
data/raw/: IPEC.xlsx  economic_activity.xlsx  exchange_rates.xlsx  interest_rates.xlsx
models/: lags.json  model.py  prophet_housing_extensions.json  prophet_housing_new_construction.json  prophet_non_residential_icef.json  prophet_non_residential_services.json  xgb_housing_extensions.json  xgb_housing_new_construction.json  xgb_non_residential_icef.json  xgb_non_residential_services.json
scripts/: analysis.py  dl_forecast.py  download.py  pipeline.py  prophet_forecast.py  xgboost_forecast.py
