[project]
name = "construction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "cmdstanpy==1.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "holidays==0.101",
    "idna==3.18",
    "importlib-resources==7.1.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.11.1",
    "narwhals==2.24.0",
    "numpy==2.5.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "pillow==12.3.0",
    "plotly==6.9.0",
    "prophet==1.3.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "ruff>=0.15.22",
    "scikit-learn>=1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "stanio==0.5.1",
    "statsmodels==0.14.6",
    "torch>=2.13.0",
    "tqdm==4.69.0",
    "urllib3==2.7.0",
    "xgboost==3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{models}"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # Pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "PLR0915", # Too many statements
]
ignore = [
    "F403",    # 'from module import *' used; unable to detect undefined names
    "F405",    # Name may be undefined, or defined from star imports
    "
]

[tool.ruff.lint.pylint]
max-statements = 40

[tool.ruff.format]
quote-style = "double"

